# rwp-module2

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
data/: electricy1.json
rwp-module2/data/: electricy2.json
rwp_module2/: card_model.py  cli_cards.py  run.py  streamlit_app.py
tests/: test_cards.py
