[tool.poetry]
name = "rwp-module2"
version = "0.1.0"
description = ""
authors = ["Richard Anton <ranton@ranton.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
urllib3 = "^2.1.0"
beautifulsoup4 = "^4.12.2"
streamlit = "^1.30.0"
pydantic = "2.5.3"
#pydantic = "^2.5.3"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
flake8 = "^7.0.0"
flake8-unused-arguments = "^0.0.13"
isort = "^5.13.2"
black = "^23.12.1"
#mypy = "^1.8.0"
mypy = "1.8.0"
pre-commit = "^3.6.0"
poetry-plugin-export = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
